export const snapshot = {};

snapshot[`parse empty string 1`] = `[]`;

snapshot[`parse fn foo() { } 1`] = `
[
  {
    calls: [],
    end: 12,
    kind: "fn",
    name: "foo",
    nameElem: {
      end: 6,
      kind: "fnName",
      name: "foo",
      start: 3,
    },
    start: 0,
    typeRefs: [],
  },
]
`;

snapshot[`parse fn with calls 1`] = `
[
  {
    calls: [
      {
        end: 14,
        kind: "call",
        name: "foo",
        start: 11,
      },
      {
        end: 21,
        kind: "call",
        name: "bar",
        start: 18,
      },
    ],
    end: 26,
    kind: "fn",
    name: "foo",
    nameElem: {
      end: 6,
      kind: "fnName",
      name: "foo",
      start: 3,
    },
    start: 0,
    typeRefs: [],
  },
]
`;

snapshot[`parse struct 1`] = `
[
  {
    end: 29,
    kind: "struct",
    members: [
      {
        end: 19,
        kind: "member",
        name: "a",
        start: 13,
        typeRefs: [
          {
            end: 19,
            kind: "typeRef",
            name: "f32",
            start: 16,
          },
        ],
      },
      {
        end: 27,
        kind: "member",
        name: "b",
        start: 21,
        typeRefs: [
          {
            end: 27,
            kind: "typeRef",
            name: "i32",
            start: 24,
          },
        ],
      },
    ],
    name: "Foo",
    nameElem: {
      end: 10,
      kind: "typeName",
      name: "Foo",
      start: 7,
    },
    start: 0,
  },
]
`;

snapshot[`parse @attribute before fn 1`] = `
[
  {
    calls: [],
    end: 31,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 26,
      kind: "fnName",
      name: "main",
      start: 22,
    },
    start: 5,
    typeRefs: [],
  },
]
`;

snapshot[`wordNumArgs parses (a, b, 1) 1`] = `
[
  "a",
  "b",
  "1",
]
`;

snapshot[`parse @compute @workgroup_size(a, b, 1) before fn 1`] = `
[
  {
    calls: [],
    end: 61,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 56,
      kind: "fnName",
      name: "main",
      start: 52,
    },
    start: 5,
    typeRefs: [],
  },
]
`;

snapshot[`parse global diagnostic 1`] = `
[
  {
    end: 43,
    kind: "globalDirective",
    start: 5,
  },
  {
    calls: [],
    end: 61,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 56,
      kind: "fnName",
      name: "main",
      start: 52,
    },
    start: 49,
    typeRefs: [],
  },
]
`;

snapshot[`parse const_assert 1`] = `
[
  {
    end: 24,
    kind: "globalDirective",
    start: 5,
  },
  {
    calls: [],
    end: 42,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 37,
      kind: "fnName",
      name: "main",
      start: 33,
    },
    start: 30,
    typeRefs: [],
  },
]
`;

snapshot[`parse top level var 1`] = `
[
  {
    end: 52,
    kind: "var",
    name: "u",
    start: 5,
    typeRefs: [
      {
        end: 51,
        kind: "typeRef",
        name: "Uniforms",
        start: 43,
      },
    ],
  },
  {
    calls: [],
    end: 76,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 71,
      kind: "fnName",
      name: "main",
      start: 67,
    },
    start: 64,
    typeRefs: [],
  },
]
`;

snapshot[`parse top level override and const 1`] = `
[
  {
    end: 21,
    kind: "var",
    name: "x",
    start: 5,
    typeRefs: [],
  },
  {
    end: 38,
    kind: "var",
    name: "y",
    start: 26,
    typeRefs: [],
  },
  {
    calls: [],
    end: 56,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 51,
      kind: "fnName",
      name: "main",
      start: 47,
    },
    start: 44,
    typeRefs: [],
  },
]
`;

snapshot[`parse root level ;; 1`] = `[]`;

snapshot[`parse simple alias 1`] = `
[
  {
    end: 24,
    kind: "alias",
    name: "NewType",
    start: 0,
    typeRefs: [
      {
        end: 23,
        kind: "typeRef",
        name: "OldType",
        start: 16,
      },
    ],
  },
]
`;

snapshot[`parse array alias 1`] = `
[
  {
    end: 37,
    kind: "alias",
    name: "Points3",
    start: 5,
    typeRefs: [
      {
        end: 36,
        kind: "typeRef",
        name: "array",
        start: 21,
      },
      {
        end: 36,
        kind: "typeRef",
        name: "Point",
        start: 21,
      },
    ],
  },
]
`;

snapshot[`unexpected token 1`] = `
"??? word: 'b'  
a b   Ln 1
  ^"
`;

snapshot[`parse foo::bar();  1`] = `
[
  {
    calls: [
      {
        end: 20,
        kind: "call",
        name: "foo::bar",
        start: 12,
      },
    ],
    end: 25,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 7,
      kind: "fnName",
      name: "main",
      start: 3,
    },
    start: 0,
    typeRefs: [],
  },
]
`;

snapshot[`parse foo.bar();  1`] = `
[
  {
    calls: [
      {
        end: 19,
        kind: "call",
        name: "foo.bar",
        start: 12,
      },
    ],
    end: 24,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 7,
      kind: "fnName",
      name: "main",
      start: 3,
    },
    start: 0,
    typeRefs: [],
  },
]
`;

snapshot[`parse let x: foo::bar;  1`] = `
[
  {
    calls: [],
    end: 34,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 7,
      kind: "fnName",
      name: "main",
      start: 3,
    },
    start: 0,
    typeRefs: [
      {
        end: 27,
        kind: "typeRef",
        name: "foo::bar",
        start: 19,
      },
    ],
  },
]
`;

snapshot[`parse let x: foo.bar;  1`] = `
[
  {
    calls: [],
    end: 33,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 7,
      kind: "fnName",
      name: "main",
      start: 3,
    },
    start: 0,
    typeRefs: [
      {
        end: 26,
        kind: "typeRef",
        name: "foo.bar",
        start: 19,
      },
    ],
  },
]
`;

snapshot[`parse switch statement 1`] = `
[
  {
    calls: [],
    end: 104,
    kind: "fn",
    name: "main",
    nameElem: {
      end: 12,
      kind: "fnName",
      name: "main",
      start: 8,
    },
    start: 5,
    typeRefs: [],
  },
]
`;
